--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
-            const url = 'https://corsproxy.io/?' + encodeURIComponent('https://us-central1.gcp.data.mongodb-api.com/app/application-0-sorpnwy/endpoint/ForbiddenRose?secret=ForbiddenRose1337SecretNigga');
+            const url = 'https://us-central1.gcp.data.mongodb-api.com/app/application-0-sorpnwy/endpoint/ForbiddenRose?secret=ForbiddenRose1337SecretNigga';
             $.ajax({
                 type: "POST",
                 url: url,
